--- a/components.json
+++ b/components.json
@@ -2,10 +2,11 @@
   "$schema": "https://shadcn-vue.com/schema.json",
   "style": "default",
   "typescript": true,
+  "tsConfigPath": ".nuxt/tsconfig.json",
   "tailwind": {
     "config": "tailwind.config.js",
     "css": "assets/css/tailwind.css",
-    "baseColor": "neutral",
+    "baseColor": "gray",
     "cssVariables": false
   },
   "framework": "nuxt",
