--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@vueuse/nuxt": "^10.9.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
     "lucide-vue-next": "^0.378.0",
     "nuxt": "^3.11.2",
     "nuxt-icons": "^3.2.1",
@@ -25,6 +26,7 @@
     "shadcn-nuxt": "^0.10.4",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
+    "viem": "^2.16.3",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
   },
